Modified index file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> COMP 322 Aissgnment One </title>
 </head>
 <body>
+<h1> Faith Wilson Biography </h1>
+<p> I am a junior Computer Science student from Lawrenceville, Ga. I was originally born
+    and raised in Alabama , but I have been in Georgia for 18 years. I have one older sister. I also have two dogs named Jazmine and Fancy.
+    My expected graduation date is May 2022. </p>
+<img src="Faith Wilson Headshot.jpg"  width = 500 height = 700 >
+<h1> Spring 2021 Class List </h1>
+<ul>
+    <li> COMP 300 - Junior Colloqium </li>
+    <li> COMP 360 - Programming Languages </li>
+    <li> COMP 322 - Internet Systems </li>
+    <li> COMP 365 - AI and Machine Learning </li>
+    <li> COMP 350 - Operating Systems </li>
+    <li> COMP 390 - Computer Ethics </li>
+</ul>
+
+<a href = "http://localhost:63342/Homework1/introduction.html?_ijt=ugtq8m9d1olbti5k5m82nereud" target="_self" > Click Me </a>
 
 </body>
 </html>
