--- a/introduction.html
+++ b/introduction.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Introduction </title>
+    <style>
+        table , th , td {
+            border:1px solid black;
+        }
+    </style>
 </head>
 <body>
+<h1> Introduction Into Faith A Wilson </h1>
+<table style="width:100%">
+    <tr>
+        <th> Skills </th>
+        <th> Abilities </th>
+        <th> Education </th>
+        <th> Training </th>
+    </tr>
+    <tr>
+        <td> Programming and Data Analytics </td>
+        <td> Code and Presentation </td>
+        <td> High School Diploma </td>
+        <td> Internship experience with watchOS development </td>
+    </tr>
+
+</table>
+
+
+<a href = "http://localhost:63342/Homework1/index.html?_ijt=ugtq8m9d1olbti5k5m82nereud" target="_self" > Click Me </a>
 
 </body>
 </html>
