--- a/introduction.html
+++ b/introduction.html
@@ -8,6 +8,9 @@
             border:1px solid black;
         }
     </style>
+
+    <img src="profile picture.jpg"  width = 500 height = 700 >
+    <img src="young faith.jpg"  width = 500 height = 700 >
 </head>
 <body>
 <h1> Introduction Into Faith A Wilson </h1>
