--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li> COMP 390 - Computer Ethics </li>
 </ul>
 
-<a href = "http://localhost:63342/Homework1/introduction.html?_ijt=ugtq8m9d1olbti5k5m82nereud" target="_self" > Click Me </a>
+<a href = "introduction.html" target="_self" > Click Me </a>
 
 </body>
 </html>
