--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> COMP 322 Aissgnment One </title>
+    <title> COMP 322 Assignment One </title>
 </head>
 <body>
 <h1> Faith Wilson Biography </h1>
