--- a/introduction.html
+++ b/introduction.html
@@ -31,7 +31,7 @@
 </table>
 
 
-<a href = "http://localhost:63342/Homework1/index.html?_ijt=ugtq8m9d1olbti5k5m82nereud" target="_self" > Click Me </a>
+<a href = "little_prince.html" target="_self" > Click Me </a>Me </a>
 
 </body>
 </html>
