Updates to index with little prince

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li> COMP 390 - Computer Ethics </li>
 </ul>
 
-<a href = "introduction.html" target="_self" > Click Me </a>
+<a href = "little_prince.html" target="_self" > Little Prince </a>
 
 </body>
 </html>
