--- a/little_prince.html
+++ b/little_prince.html
@@ -10,7 +10,7 @@
 <br>
 <div>
     As the little prince dropped off to sleep, I took him in my arms and set out walking once more. <span class = "underline">I felt deeply moved, and stirred.
-    It seemed to me that I was carrying a very fragile treasure. </span>  <span class = "orangeback";> It seemed to me,even, that there
+    It seemed to me that I was carrying a very fragile treasure. </span>  <span class = "orange-back";> It seemed to me,even, that there
     was nothing more fragile on all Earth. </span> In the moonlight I looked at his pale forehead, his closed eyes, his locks of hair
     that trembled in the wind, and I said to myself: <span class = "red"> "What I see here is nothing but a shell.What is most important is invisible..." </span>
     As his lips opened slightly with the suspicion of a half-smile, I said to myself, again: <span class= "red"> "What moves me so deeply , about this little prince who is sleeping here,is his loyalty to a flower the image
