--- a/little_prince.html
+++ b/little_prince.html
@@ -20,7 +20,7 @@
 </div>
 
 <div>
-    <a href = "index.html" target="_self" > Index </a>Me </a>
+    <a href = "index.html" target="_self" > Index  </a>
 </div>
 
 </body>
